- Updating parent config to ensure java.xml.bind module is added as a compile and test argument for legacy jaxb support. - Removing explicit jaxb oracle dependencies for compatibility with openjdk. - Removing protos-go from the build since it's built by the sftp-relay module independently. - lots of code linting and basic cleanup.