@@ -99,7 +99,7 @@
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <flyway-maven-plugin.version>4.0</flyway-maven-plugin.version>
         <flyway-maven-plugin.versionRange>[4.0,)</flyway-maven-plugin.versionRange>
-        <jaxb.version>2.3.0</jaxb.version>
+        <jaxb.version>2.2.11</jaxb.version>
         <jacoco.version>0.8.1</jacoco.version>
         <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
@@ -289,6 +289,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+<!--                        <proc>none</proc>-->
+                        <source>${java-source.version}</source>
+                        <target>${java-target.version}</target>
+                        <compilerArgs>
+                            <arg>--add-modules=java.xml.bind</arg>
+                        </compilerArgs>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>default-compile</id>
@@ -298,12 +306,6 @@
                             </goals>
                         </execution>
                     </executions>
-                    <configuration>
-                        <proc>none</proc>
-                        <debug>true</debug>
-                        <source>${java-source.version}</source>
-                        <target>${java-target.version}</target>
-                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -426,7 +428,7 @@
                     <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
                         <argLine>
-                            --illegal-access=permit
+                            --illegal-access=permit --add-modules=java.xml.bind
                         </argLine>
                         <skipTests>${skip.integration.tests}</skipTests>
                         <groups>integration</groups>
@@ -501,6 +503,7 @@
 <!--                    <artifactId>jib-maven-plugin</artifactId>-->
 <!--                    <version>${maven-jib-plugin.version}</version>-->
 <!--                </plugin>-->
+
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
@@ -519,28 +522,9 @@
                                 <goal>report</goal>
                             </goals>
                         </execution>
-                        <execution>
-                            <id>default-check</id>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                            <configuration>
-                                <rules>
-                                    <rule>
-                                        <element>BUNDLE</element>
-                                        <limits>
-                                            <limit>
-                                                <counter>COMPLEXITY</counter>
-                                                <value>COVEREDRATIO</value>
-                                                <minimum>0.60</minimum>
-                                            </limit>
-                                        </limits>
-                                    </rule>
-                                </rules>
-                            </configuration>
-                        </execution>
                     </executions>
                 </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
@@ -612,15 +596,15 @@
 
                 <skip.unit.tests>false</skip.unit.tests>
 
-                <foundation.smtp.token></foundation.smtp.token>
                 <slack.webhook.url></slack.webhook.url>
+                <foundation.smtp.token></foundation.smtp.token>
             </properties>
         </profile>
         <profile>
             <id>integration-test</id>
             <!-- *********************************************************************
-                 **	turns off unit tests and enables dockerized integration tests   **
-                 *********************************************************************-->
+                **	turns off unit tests and enables migrated db image build            **
+                ***********************************************************************-->
             <properties>
                 <force.check.update>false</force.check.update>
                 <force.check.version>false</force.check.version>
